--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,12 +12,23 @@ name: build and publish docker
 on:
   push:
     branches: [main]
-    workflow-dispatch:
+    tags:
+      - "v*.*"
 
 jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: alialjaffer/ceg3120_project4
+          tags: |
+            type=ref,event=branch
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
@@ -30,5 +41,6 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
+          context: .
           push: true
-          tags: alialjaffer/ceg3120_project4:latest
+          tags: ${{ steps.meta.outputs.tags }}
