--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,7 +13,7 @@ on:
   push:
     branches: [main]
     tags:
-      - "v*.*"
+      - "v*.*.*"
 
 jobs:
   docker:
@@ -41,6 +41,6 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
-          context: .
+          #context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
