Edited workflow to start after

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -55,3 +55,11 @@ jobs:
           #context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
+  alert-on-success:
+    needs: docker
+    runs-on: ubuntu-latest
+    steps:
+      - name: Invoke deployment hook
+        uses: distributhor/workflow-webhook@v2
+        env:
+          webhook_url: ${{ secrets.WEBHOOK_URL }}
