--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,7 +11,6 @@ name: build and publish docker
 
 on:
   push:
-    branches: [main]
     tags:
       - "v*.*.*"
 
@@ -19,11 +18,6 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      - name: actions
-        uses: actions/checkout@v3
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          fetch-depth: 0
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v4
@@ -50,6 +44,11 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: checkout branch
+        uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
