--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
-          #context: .
+          context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
   alert-on-success:
